--- a/task-board/package.json
+++ b/task-board/package.json
@@ -10,6 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@reduxjs/toolkit": "^2.11.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
