--- a/task-board/package.json
+++ b/task-board/package.json
@@ -10,16 +10,19 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@elysiajs/openapi": "^1.4.11",
     "@radix-ui/react-slot": "^1.2.4",
     "@reduxjs/toolkit": "^2.11.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "elysia": "^1.4.18",
     "lucide-react": "^0.560.0",
     "next": "16.0.9",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-redux": "^9.2.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
