chore(task-board): install @tw-classed/react

--- a/task-board/package.json
+++ b/task-board/package.json
@@ -13,6 +13,7 @@
     "@elysiajs/openapi": "^1.4.11",
     "@radix-ui/react-slot": "^1.2.4",
     "@reduxjs/toolkit": "^2.11.1",
+    "@tw-classed/react": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "elysia": "^1.4.18",
