--- a/task-board/package.json
+++ b/task-board/package.json
@@ -19,9 +19,11 @@
     "elysia": "^1.4.18",
     "lucide-react": "^0.560.0",
     "next": "16.0.9",
+    "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-redux": "^9.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
