--- a/task-board/package.json
+++ b/task-board/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@elysiajs/openapi": "^1.4.11",
+    "@neondatabase/serverless": "^1.0.2",
     "@radix-ui/react-slot": "^1.2.4",
     "@reduxjs/toolkit": "^2.11.1",
     "@tw-classed/react": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^1.0.0-beta.2-58a4521",
     "elysia": "^1.4.18",
     "lucide-react": "^0.560.0",
     "next": "16.0.9",
@@ -25,14 +27,18 @@
     "react-redux": "^9.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.1.13"
+    "zod": "^4.1.13",
+    "zod-validation-error": "^5.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^1.0.0-beta.2-58a4521",
+    "pg": "^8.16.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
