--- a/task-board/package.json
+++ b/task-board/package.json
@@ -17,7 +17,9 @@
     "@tw-classed/react": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^1.0.0-beta.2-58a4521",
+    "drizzle-kit": "^0.31.8",
+    "drizzle-orm": "^0.45.1",
+    "drizzle-zod": "^0.8.3",
     "elysia": "^1.4.18",
     "lucide-react": "^0.560.0",
     "next": "16.0.9",
@@ -37,7 +39,6 @@
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^1.0.0-beta.2-58a4521",
     "pg": "^8.16.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
