--- a/task-board/package.json
+++ b/task-board/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@elysiajs/openapi": "^1.4.11",
+    "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.2",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@reduxjs/toolkit": "^2.11.1",
     "@tw-classed/react": "^1.8.1",
@@ -26,9 +29,11 @@
     "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-hook-form": "^7.68.0",
     "react-redux": "^9.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "vaul": "^1.1.2",
     "zod": "^4.1.13",
     "zod-validation-error": "^5.0.0"
   },
